Fix/font size (#73)
* dev: adjust font weight for headings

* dev: add a slight margin to buttons so they dont overlap

--- a/src/styling/_typography.scss
+++ b/src/styling/_typography.scss
@@ -2,6 +2,12 @@ body {
   font-family: 'Source Sans Pro', Arial, Verdana, sans-serif;
 }
 
+h1,
+h2,
+h3 {
+  font-weight: 600;
+}
+
 h4,
 h5 {
   font-weight: 700;
